# rtsp2browser

./: .gitignore  README.md
client/: client.js  index.html  worker.js
proxy-server/: Cargo.toml  DO_NOT_USE_CERT.pem  DO_NOT_USE_KEY.pem
proxy-server/src/: proxy.rs  rtsp-server.rs  rtsp.rs  server.rs  transport.rs
src/: proxy.rs  rtsp-server.rs  server.rs
www/: client.js  index.html  worker.js
